--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
@@ -27,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "sass-embedded": "^1.80.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
